# fraudguard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  stress_results.txt
.github/workflows/: ci.yml
config/: data_config.yaml  model_config.yaml
notebooks/: colab_training.ipynb  colab_training.md  colab_training.py
notebooks/legacy/: colab_training_10.ipynb  colab_training_11.ipynb  colab_training_2.ipynb  colab_training_3.ipynb  colab_training_4.ipynb  colab_training_5.ipynb  colab_training_6.ipynb  colab_training_7.ipynb  colab_training_8.ipynb  colab_training_9.ipynb
scripts/: build_inference_artifacts.py  debug_collapse.py  stress_test.py  test_phase2.py  train.py  train_full.py  train_fullbatch.py  train_local.py  upgrade_notebook_full.py
scripts/legacy/: baseline_comparison.py  debug_collapse.py  reproduce_cv_metrics.py  test_phase2.py  train_framework.py  train_full.py  train_fullbatch.py  train_local.py  update_notebook.py  upgrade_notebook_full.py
src/: __init__.py
src/api/: __init__.py  cache.py  main.py  model_loader.py  schemas.py
src/data/: __init__.py  graph_builder.py  loader.py  preprocessor.py
src/explainability/: __init__.py  explainer.py
src/inference/: __init__.py
src/models/: __init__.py  adaptive_mcd.py  gnn.py  losses.py  mces.py  rl_agent.py
src/training/: __init__.py  callbacks.py  evaluator.py  minibatch_trainer.py  trainer.py
src/utils/: __init__.py  config.py  device_utils.py  exceptions.py  logger.py
tests/: __init__.py
tests/unit/: test_data_module.py
