[tool.poetry]
name = "fraudguard"
version = "0.1.0"
description = "Production-ready GNN fraud detection with RL subgraph selection"
authors = ["Jose A"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torch-geometric = "^2.3.0"
# NOTE: torch-scatter and torch-sparse require special installation:
# pip install torch-scatter torch-sparse -f https://data.pyg.org/whl/torch-{VERSION}+{CUDA}.html
torch-scatter = "^2.1.0"
torch-sparse = "^0.6.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
faiss-cpu = "^1.7.4"  # Use faiss-gpu on Colab: pip install faiss-gpu
pyyaml = "^6.0"
structlog = "^23.1.0"
mlflow = "^2.10.0"

# API dependencies
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
